--- a/first_web_app/templates/app_one/index.htm
+++ b/first_web_app/templates/app_one/index.htm
@@ -11,6 +11,7 @@
 </head>
 <body>
     <h1>django</h1>
+    {{name}}
     <p>django is a server scripting language, and a powerful tool for making dynamic and interactive Web pages.</p>
     <p>django is a widely-used, free, and efficient alternative to competitors such as Microsoft's ASP.</p>
     <p>django is perfectly suited for Web development and can be embedded directly into the HTML code.</p>
