--- a/project_admin/app_cars/templates/app_cars/list.html
+++ b/project_admin/app_cars/templates/app_cars/list.html
@@ -2,6 +2,12 @@
 
 {% block content %}
 
-    <h1>list.html</h1>
+    <div class="container" >
+        <ul>
+            {% for car in all_cars %}
+            <li>{{ car }}</li>
+            {% endfor %}
+        </ul>
+    </div>
 
 {%endblock%}
