--- a/mysite/cars/templates/cars/rental_review.html
+++ b/mysite/cars/templates/cars/rental_review.html
@@ -12,12 +12,24 @@
     <div class='container'>
 
         <form method="POST">
-          {% csrf_token %}
-          {{form}}
-          <br><br><input type="submit" >
           
+          {% csrf_token %}
+          
+          <!-- {{form.as_p}} -->
+          <!-- {{form.first_name.label}} {{form.first_name}} -->
+          
+          {% for field in form %}
+          
+          <div class="container">
+            {{field.label_tag}}
+          </div>
+          
+          <div class="mb-13">
+            {{field}}
+          </div>
 
-        
+          {% endfor %}
+          <br><input type="submit" >
         </form>
 
     </div>
@@ -27,6 +39,6 @@
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script> -->
   </body>
 </html>
