--- a/mysite/cars/templates/cars/rental_review.html
+++ b/mysite/cars/templates/cars/rental_review.html
@@ -1,9 +1,11 @@
 <!doctype html>
+{% load static %}
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Rental Review</title>
+    <link rel="stylesheet" href="{% static 'cars/style.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   </head>
   <body>
@@ -11,25 +13,23 @@
 
     <div class='container'>
 
-        <form method="POST">
-          
+        <form method="POST" class="myform">
           {% csrf_token %}
-          
           <!-- {{form.as_p}} -->
           <!-- {{form.first_name.label}} {{form.first_name}} -->
           
           {% for field in form %}
-          
-          <div class="container">
+          <div class="form-div">
             {{field.label_tag}}
           </div>
-          
-          <div class="mb-13">
+          <div class="form-div">
             {{field}}
           </div>
-
           {% endfor %}
-          <br><input type="submit" >
+          <div class="form-div" >
+            <input type="submit" >
+          </div>
+        
         </form>
 
     </div>
