--- a/blackcoffee/dash/templates/index.html
+++ b/blackcoffee/dash/templates/index.html
@@ -13,9 +13,66 @@
   <div class="chart-menu">
     <p><span style="color: black">Blackcoffee</span> | Dashboard</p>
   </div>
+  
+  <h1>Filter Data</h1>
+    <form method="get" action="{% url 'index' %}">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Search</button>
+    </form>
+    
+    {% if queryset %}
+        <h2>Filtered Results:</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>End Year</th>
+                    <th>Country</th>
+                    <th>Topic</th>
+                    <th>Region</th>
+                    <th>Pestle</th>
+                    <th>Sector</th>
+                    <th>Source</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for item in queryset %}
+                    <tr>
+                        <td>{{ item.end_year }}</td>
+                        <td>{{ item.country }}</td>
+                        <td>{{ item.topic }}</td>
+                        <td>{{ item.region }}</td>
+                        <td>{{ item.pestle }}</td>
+                        <td>{{ item.sector }}</td>
+                        <td>{{ item.source }}</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    {% endif %}
+
+
   <div class="chart-card">
     <div class="chart-box">
-      <canvas id="myChart"></canvas>
+      <canvas id="myChartIntensity"></canvas>
+    </div>
+  </div>
+  
+  <div class="chart-card">
+    <div class="chart-box">
+      <canvas id="myChartLikelihood"></canvas>
+    </div>
+  </div>
+
+  <div class="chart-card">
+    <div class="chart-box">
+      <canvas id="myChartRelevance"></canvas>
+    </div>
+  </div>
+
+  <div class="chart-card">
+    <div class="chart-box">
+      <canvas id="myChartYear"></canvas>
     </div>
   </div>
 
